# Intern-Trading-Game

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  README.md  TEST_IMPROVEMENT_PLAN.md  TICK_TO_PHASE_MIGRATION_PLAN.md  build-docs.sh  cspell.json  index.html  mkdocs-public.yml  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt
.clinerules/: docstring-rules.md  documentation-rules.md  line-length-rules.md  python-style-guidelines.md  testing-rules.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml
.pre-commit-hooks/: check_math_directives.py
config/: default.yaml  test-batch.yaml  test-constraints.yaml
docs/: README.md  index-private.md  index.md
docs/contributing/: docstring-math-guide.md
docs/explanation/: explaining-order-matching.md
docs/game/: README.md  overview.md
docs/game/appendix/: formulas.md  glossary.md  probability-tables.md
docs/game/configuration/: example-config.yaml  game-parameters.md  schedule.md
docs/game/fundamentals/: core-concepts.md  game-mechanics.md  market-structure.md
docs/game/research/: arbitrage-desk-guide.md  hedge-fund-guide.md  market-maker-guide.md
docs/game/roles/: README.md  arbitrage-desk.md  hedge-fund.md  market-maker.md  overview.md  retail.md
docs/game/scoring/: evaluation-periods.md  overview.md
docs/game/simulation/: correlation-model.md  news-events.md  price-generation.md  volatility-regimes.md
docs/game/trading/: constraints.md  execution-rules.md  order-types.md  signals-access.md
docs/how-to/: how-to-submit-orders.md  setup-game-loop.md
docs/reference/: math-examples.md
docs/stylesheets/: extra.css
docs/technical/: architecture-v2.md  architecture-v3.md  architecture-v4.md  architecture.md  build-order.md  gen_ref_pages.py  implementation-guide.md  index.md  phase-transition-implementation.md
docs/technical/contributing/: docstring-math-guide.md
docs/technical/explanation/: api-communication-design.md  api-design-principles.md  batch-matching.md  index.md  internal-response-coordination.md  order-matching.md  order-response-coordination.md  order-validator-design.md  phase-transition-handler.md  trading-phases.md  (+2 more)
game/: index.html
game/overview/: index.html
game/roles/: index.html
reference/instrument/: index.html
reference/order/: index.html
reference/order_book/: index.html
reference/trade/: index.html
reference/venue/: index.html
search/: search_index.json
src/intern_trading_game/: __init__.py  example.py  main.py  main_new.py
stylesheets/: extra.css
technical/: gen_ref_pages.py  index.html
technical/architecture/: index.html
technical/architecture-v2/: index.html
technical/architecture-v3/: index.html
technical/build-order/: index.html
technical/explanation/: index.html
technical/how-to/: index.html
technical/implementation-guide/: index.html
technical/reference/: index.html
tests/: FIXTURE_REFACTORING_PLAN.md  __init__.py  test_core_models.py  test_exchange.py  test_game_loop.py  test_main.py  test_matching_engine.py  test_order_cancel_api.py  test_order_cancel_unit.py  test_websocket.py  test_websocket_integration.py
tests/fixtures/: __init__.py  market_data.py
tests/integration/: README.md  conftest.py  test_api.py  test_thread_coordinator_integration.py  test_websocket_integration.py
tests/unit/: test_main.py
tests/utils/: test_phase_manager.py
(+287 files in other folders)
