[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Intern-Trading-Game"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
  # No core dependencies yet
]

[project.optional-dependencies]
# Development dependencies, only needed for testing and local development
dev = [
  "pytest>=8.0",
  "pre-commit>=2.20",
  "black>=24.1.0",
  "isort>=5.12.0",
  "flake8>=6.1.0",
  "mypy>=1.5.1",
  "bandit>=1.7.5",
  "types-tqdm>=4.64.0"
]

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
packages = ["intern_trading_game"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
